--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "devDependencies": {
         "react-native-scripts": "1.13.2",
         "jest-expo": "27.0.0",
-        "react-test-renderer": "16.3.2"
+        "react-test-renderer": "16.3.2",
+        "eslint-config-rallycoding": "^3.2.0"
     },
     "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
     "scripts": {
@@ -22,12 +23,12 @@
         "@expo/videoplayer": "^0.4.0",
         "eslint": "^3.19.0",
         "expo": "27.1.0",
-        "firebase": "^4.13.1",
+        "firebase": "^5.1.0",
         "native-base": "^2.4.2",
-        "react": "^16.0.0-alpha.12",
+        "react": "16.3.1",
         "react-art": "^16.4.1",
         "react-dom": "^16.4.0",
-        "react-native": "^0.55",
+        "react-native": "0.55.4",
         "react-native-web": "^0.8.4",
         "react-navigation": "^1.5.11"
     }
