--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "react-native-scripts": "1.13.2",
         "jest-expo": "27.0.0",
         "react-test-renderer": "16.3.2",
-        "eslint-config-rallycoding": "^3.2.0"
+        "eslint-config-rallycoding": "^3.2.0",
+        "lodash": "^4.17.10"
     },
     "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
     "scripts": {
