--- a/functions/sendgrid.env
+++ b/functions/sendgrid.env
@@ -1,1 +1,1 @@
-"export SENDGRID_API_KEY='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'" 
+"export SENDGRID_API_KEY='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'" 
