--- a/functions/package.json
+++ b/functions/package.json
@@ -13,6 +13,7 @@
     "firebase": "^5.2.0",
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.0.3",
+    "googleapis": "^32.0.0",
     "sendgrid": "^5.2.3",
     "twilio": "^3.17.4"
   },
