--- a/functions/.eslintrc.json
+++ b/functions/.eslintrc.json
@@ -1,7 +1,11 @@
 {
   "parserOptions": {
     // Required for certain syntax usages
-    "ecmaVersion": 6
+    "ecmaVersion": 2018,
+    "sourceType": "module",
+        "ecmaFeatures": {
+            "jsx": true
+        }
   },
   "plugins": [
     "promise"
