--- a/functions/package.json
+++ b/functions/package.json
@@ -18,6 +18,7 @@
     "twilio": "^3.17.4"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.6",
     "eslint": "^4.12.0",
     "eslint-plugin-promise": "^3.6.0"
   },
