--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "react-native": "0.55.4",
         "react-native-autolink": "^1.4.0",
         "react-native-camera": "^1.1.4",
+        "react-native-phone-call": "^1.0.7",
         "react-native-vector-icons": "^5.0.0",
         "react-native-video": "^3.2.0",
         "react-native-web": "^0.8.4",
