--- a/functions/package.json
+++ b/functions/package.json
@@ -10,6 +10,8 @@
     "logs": "firebase functions:log"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
+    "dotenv": "^6.0.0",
     "firebase": "^5.2.0",
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.0.3",
