--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
     "version": "0.1.0",
     "private": true,
     "devDependencies": {
-        "react-native-scripts": "1.13.2",
-        "jest-expo": "27.0.0",
-        "react-test-renderer": "16.3.2",
         "eslint-config-rallycoding": "^3.2.0",
-        "lodash": "^4.17.10"
+        "jest-expo": "^27.0.0",
+        "lodash": "^4.17.10",
+        "react-native-scripts": "^1.13.2",
+        "react-test-renderer": "^16.3.2"
     },
     "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
     "scripts": {
@@ -23,7 +23,7 @@
     "dependencies": {
         "@expo/videoplayer": "^0.4.0",
         "eslint": "^3.19.0",
-        "expo": "27.1.0",
+        "expo": "^27.1.0",
         "firebase": "^5.1.0",
         "native-base": "^2.4.2",
         "react": "16.3.1",
