--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-   "expo": {
+  "expo": {
     "name": "SMARTtest App",
     "icon": "./Images/icon.png",
-    "version": "1.0.2",
+    "version": "1.0.3",
     "slug": "SMARTtest-App",
     "sdkVersion": "27.0.0",
     "orientation": "portrait",
@@ -18,6 +18,7 @@
         "CAMERA",
         "READ_PHONE_STATE"
       ]
-    }
-   }
- }
+    },
+    "description": ""
+  }
+}
